examples/fail/case_binder_scope_leak.hax
module CaseBinderScopeLeak;

enum Opt {
  Some(Int $a);
  None;
}

sub f(Opt $p) -> Int {
  case($p) {
    when Some(Int $x) {
      return $x;
    }
    else {
      return 0;
    }
  }

  # $x is bound only within the when arm body; it must not leak out.
  return $x;
}
